--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
 
     <!-- base url -->
-    <base href="/">
+    <base href="/hello-angular2-animations/">
   </head>
 
   <body>
